<resources>
    <string name="app_name">AnAnCooking</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="already_have_account">Already have an account? <u>Sign In!</u></string>
    <string name="facebook_signup">Facebook</string>
    <string name="google_signup">Google+</string>
    <string name="anan_signup">Sign Up</string>
    <string name="text_or_google_fb">Or Sign Up Via</string>
    <string name="skip">Or actually you can <u>Skip This</u></string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">Settings</string>
    <string name="setting_sounds">Sounds</string>
    <string name="setting_image_preview">Image Preview</string>
    <string name="version_status">Version 1.0.0</string>
    <string name="version_status2">Release Date: 03/10/2015</string>
    <string name="version_setting">Version Status</string>
    <string name="title_activity_use_recipe">UseRecipeActivity</string>
    <string name="title_activity_recipe_intro">RecipeIntroActivity</string>
    <string name="ingredients_recipe_intro">Ingredients</string>
    <string name="RecipeIntroActivityLabel">Recipe Intro</string>
    <string name="time_recipe_intro">Time</string>
    <string name="description_intro_recipe">Description</string>
    <string name="start_steps_button">Let\'s Start</string>
    <string name="ratingbar1">Yummy</string>
    <string name="ratingbar2">Easy</string>
    <string name="rating_comments">Wanna Say Something?</string>
    <string name="submit_comment">Enjoy Your Dishes :)</string>
    <string name="title_activity_create_recipe_brief_description">

     <!--CreateRecipeBriefDescriptionActivity-->
    </string>
    <string name="create_recipe_name_hint">Give a cool name!</string>
    <string name="create_recipe_ingredients">Ingredients</string>
    <string name="create_recipe_name">Recipe Name</string>
    <string name="create_recipe_ingredients_hint">Do you like onion?</string>
    <string name="create_recipe_time">Time</string>
    <string name="create_recipe_descrption_hint">Say something about the recipe!</string>
    <string name="confirm_save_to_database">Are you sure you want to save?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="title_activity_image_picker">ImagePickerActivity</string>

    <!-- Creation Step Part.  2014/04/19 by Siang -->
    <string name="create_step_add_step">+</string>
    <string name="create_step_description">Description</string>
    <string name="create_step_description_hint">Say something...</string>
    <string name="create_step_save">Confirm</string>
    <string name="create_step_insert_step">+</string>
    <string name="create_step_update_position_title">Update step</string>
    <string name="create_step_insert_position_title">Insert new step after step</string>
    <string name="create_step_update_step">Update</string>
    <string name="create_step_delete_step">Delete</string>
    <string name="choose_image">Pick Preview Image</string>
    <string name="choose_image2">Pick Image</string>
    <string name="finish_and_save">Finish! Save the Recipe!!</string>


    <!-- Error Handling Part. by Kuo -->
    <string name="title_activity_crash_page">Opps... X_X</string>
    <string name="uncaught_exception_message">Somthing goes wrong. You can upload the error report to help us fix that</string>
    <string name="report_error_button">Report Error</string>
    <string name="exit_button">Exit</string>
    <string name="title_activity_test_volley">TestVolley</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="text_history_fragment">Check Your Recipe Warehouse ^_^</string>
    <string name="list_preview_time">Time</string>
    <string name="list_preview_time_unit">min</string>
    <string name="ok_message">OK</string>
    <string name="title_search_activity">SearchResult</string>


</resources>
