<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anan.anancooking.client.ui.InsertionStepDialog">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_step_insert_position_title"
                android:layout_marginRight="4dp"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/text_view_insert_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_step_description"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/edit＿text_insert_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_step_description"
                android:textSize="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left"
            >

            <Button
                android:id="@+id/image_pick_btn_in_insert_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                android:textSize="20dp"
                android:background="@drawable/custom_button"
                />

            <ImageView
                android:id="@+id/selected_image_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_launcher"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_step_save"
                android:id="@+id/save_btn"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
