<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context="com.anan.anancooking.client.ui.CrashPageActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                style="@style/TextBlackSecondary"
                android:textSize="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X_X"
                android:paddingBottom="16dp"/>
            <TextView
                style="@style/TextBlackSecondary"
                android:textSize="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oops..."
                android:paddingBottom="16dp"/>
            <TextView
                android:id="@+id/exception_dialog_message"
                style="@style/TextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uncaught_exception_message" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/TextWhite"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/exit_button" />

            <Button
                style="@style/TextWhite"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/report_error_button" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
