<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anan.anancooking.client.ui.AddStepDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_step_description" />

            <EditText
                android:id="@+id/edittext_description"
                style="@style/TextBlackSecondary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:hint="@string/create_step_description_hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_pick_btn_in_add_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/sign_out"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/selected_image_view"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:alpha="30"
                android:src="@drawable/ic_action_picture" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:id="@+id/save_btn"
                style="@style/TextBlackSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_out"
                android:padding="10dp"
                android:text="@string/create_step_save" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
